Fix legend user name clipping

--- a/src/components/LegendCard/LegendCard.module.scss
+++ b/src/components/LegendCard/LegendCard.module.scss
@@ -432,7 +432,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: fit-content;
+    width: 100%;
     margin-top: 26px;
 
     color: #ffffff;
